# welcome-screen

./: com.sriniwas.welcomescreen.json  com.sriniwas.welcomescreen.json~  meson.build
data/: com.sriniwas.welcomescreen.appdata.xml.in  com.sriniwas.welcomescreen.desktop.in  com.sriniwas.welcomescreen.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  welcomescreen.gresource.xml  welcomescreen.in  window.py  window.ui
src/components/: welcome_screen_row.py  welcome_screen_row.ui
